--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -25,6 +25,7 @@ block content
             .chat-list
                 #important(data-step="2", data-position="bottom", data-tooltipClass="step_2", data-intro="这是置顶的内(guang)容(gao)，Perber会在这里不定期地推荐一些有意思的东西")
                     .chat-box
+
                         //- .fixed_block
                         //-     .ui.right.teal.corner.label(title="通知")
                         //-         i.fa-bullhorn.fa
@@ -34,15 +35,15 @@ block content
                         //-     | 3. “网站介绍”神马的点击右上角的图标就好了，反正也没人看。对技术感兴趣的可以去<a target="_blank" href="https://github.com/naoyeye/Perber">这里</a>看代码，简单的<mark>socket.io + node.js</mark>。好了，飞走~~ ʅ(‾◡◝)ʃ
 
 
-                        //- //- card 1 bg+text
-                        //- .fixed_block.card_3
-                        //-     .ui.right.teal.corner.label(title="友情置顶")
-                        //-         i.fa-smile-o.fa
-                        //-     .ta_cont
-                        //-         h4 调查：要不要增加“投票”功能？
-                        //-         p <strong>功能描述：</strong><br><br>为了保证Perber中的内容质量，计划增加投票功能：每个人都可以对内容进行“赞”和“踩”。<br>如果某条内容得到的“赞”比“踩”多，则在一定时期内(一周？)不能删除；反之，则可以随时被任何人删除。
-                        //-         #vote_bar
-                        //-         #vote_info 此调查会在4月3日截止
+                        //- card 1 bg+text
+                        .fixed_block.card_3
+                            .ui.right.teal.corner.label(title="友情置顶")
+                                i.fa-smile-o.fa
+                            .ta_cont
+                                h4 调查：要不要增加“赞”功能？
+                                p <strong>功能描述：</strong><br><br>为了保证Perber中的内容质量，计划开发新的功能：每个人都可以对内容进行“赞”和“踩”。<br>如果某条内容得到的“赞”比“踩”多，则在一定时期内(一周？)不能删除；反之，则可以随时被任何人删除。
+                                #vote_bar
+                                #vote_info 此调查会在5月1日截止
 
 
 
@@ -72,6 +73,18 @@ block content
                         //-                     | 写好了，提交
 
 
+
+                        .fixed_block.card_4
+                            .ui.right.teal.corner.label(title="友情置顶")
+                                i.fa-star.fa
+                            .imgbox
+                                a.ta_cover(style="background-image:url(http://ww4.sinaimg.cn/large/61b8bbf4gw1ef51ke074vj20go0jg0t1.jpg); background-size:cover;")
+                                .ta_cont
+                                    p(style="padding-top: 300px;line-height:50px;")
+                                        span(style="font-size:12px;padding-top:0;")
+                                            a(href="www.wandoujia.com/join/", target="_blank", style="color:#3baa24;")
+                                                | Join Wandou Labs
+
                         //- card blocking
                         .fixed_block.card_4
                             .ui.right.teal.corner.label(title="友情置顶")
@@ -84,27 +97,41 @@ block content
                                             a( title="去 APP store 下载", href="https://itunes.apple.com/cn/app/same/id531761928?mt=8", target="_blank", style="display:block; font-size: 0;height: 90px;margin-top: 25px;margin-left: 100px;margin-right: 100px;")
                                                 | 去 APP store 下载
 
+
+                        //- card blocking
                         .fixed_block.card_4
                             .ui.right.teal.corner.label(title="友情置顶")
                                 i.fa-star.fa
                             .imgbox
-                                a.ta_cover(style="background-image:url(http://ww4.sinaimg.cn/large/ed133892gw1eegi25aklrj20hv0m8q3y.jpg); background-size:cover;")
-
+                                a.ta_cover(style="background-image:url(http://ww3.sinaimg.cn/large/61b8bbf4gw1ef52d1gq0dj20go0jgtaf.jpg); background-size:cover;")
                                 .ta_cont
-                                    p Sean Malto
+                                    p
                                         span
-                                            | 由 <a href="http://www.douban.com/people/coolzi/" target="_blank">彼得潘</a> 投递
+                                            a( title="去 APP store 下载", href="https://itunes.apple.com/us/app/monument-valley/id728293409?mt=8", target="_blank", style="display:block; font-size: 0;height: 90px;margin-top: 25px;margin-left: 100px;margin-right: 100px;")
+                                                | 去 APP store 下载
 
-                        .fixed_block.card_4
-                            .ui.right.teal.corner.label(title="友情置顶")
-                                i.fa-star.fa
-                            .imgbox
-                                a.ta_cover(style="background-image:url(http://ww4.sinaimg.cn/large/61b8bbf4gw1ef4swkg0arj20go0jgdj0.jpg); background-size:cover;")
-                                .ta_cont
-                                    p(style="padding-top: 300px;line-height:50px;")
-                                        span(style="font-size:20px;padding-top:0;font-weight:bold;")
-                                            a(href="http://www.freundevonfreunden.com/", target="_blank", style="color:#fff;")
-                                                | Freunde von Freunden
+
+                        //- .fixed_block.card_4
+                        //-     .ui.right.teal.corner.label(title="友情置顶")
+                        //-         i.fa-star.fa
+                        //-     .imgbox
+                        //-         a.ta_cover(style="background-image:url(http://ww4.sinaimg.cn/large/ed133892gw1eegi25aklrj20hv0m8q3y.jpg); background-size:cover;")
+
+                        //-         .ta_cont
+                        //-             p Sean Malto
+                        //-                 span
+                        //-                     | Post by : <a href="http://www.douban.com/people/coolzi/" target="_blank">彼得潘</a>
+
+                        //- .fixed_block.card_4
+                        //-     .ui.right.teal.corner.label(title="友情置顶")
+                        //-         i.fa-star.fa
+                        //-     .imgbox
+                        //-         a.ta_cover(style="background-image:url(http://ww4.sinaimg.cn/large/61b8bbf4gw1ef4swkg0arj20go0jgdj0.jpg); background-size:cover;")
+                        //-         .ta_cont
+                        //-             p(style="padding-top: 300px;line-height:50px;")
+                        //-                 span(style="font-size:20px;padding-top:0;font-weight:bold;")
+                        //-                     a(href="http://www.freundevonfreunden.com/", target="_blank", style="color:#fff;")
+                        //-                         | Freunde von Freunden
 
                         //- card 1 bg+text
                         //- .fixed_block.card_1
@@ -119,14 +146,15 @@ block content
 
 
                         //- card 2 bg+short text
-                        .fixed_block
-                            .ui.right.teal.corner.label(title="友情置顶")
-                                i.fa-star.fa
-                            .imgbox
-                                a.ta_cover(style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1ee53b743uyj20go0gognh.jpg);background-size: cover;")
-                                .ta_title
-                                    a(href="http://www.wandoujia.com/join", target="_blank")
-                                        | (╭￣3￣)╭♡ &nbsp; 加入豌豆荚
+                        //- .fixed_block
+                        //-     .ui.right.teal.corner.label(title="友情置顶")
+                        //-         i.fa-star.fa
+                        //-     .imgbox
+                        //-         a.ta_cover(style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1ee53b743uyj20go0gognh.jpg);background-size: cover;")
+                        //-         .ta_title
+                        //-             a(href="http://www.wandoujia.com/join", target="_blank")
+                        //-                 | (╭￣3￣)╭♡ &nbsp; 加入豌豆荚
+
                 .chat(data-step="3",
                     data-position="top",
                     data-tooltipClass="step_3",
