--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -8,10 +8,7 @@ block content
                 span#number
                 span#action
 
-            ul#Tips(data-step="4",
-                    data-position="left",
-                    data-tooltipClass="step_4",
-                    data-intro= "更多介绍、怎么使用，可以点击这俩东西（其实也是乱写的）。好了，就这样。")
+            ul#Tips
                 li#about
                     i.fa.fa-circle-o
                     span About Perber
@@ -19,14 +16,14 @@ block content
                     i.fa.fa-question-circle
                     span Usage
 
-            #drop_zone.chat-input(data-bucket="#{bucket_name}", data-step="1", data-position="bottom", data-tooltipClass="step_1", data-intro="输入文字，或者把图片拖拽到这里。支持微博图片、instagram图片、虾米音乐链接。在这里发布的任何消息，都会实时显示在其他用户的眼前。")
+            #drop_zone.chat-input(data-bucket="#{bucket_name}")
                 .ui.form
                     .field
                         textarea(placeholder="Say something", maxlength="240")
                 #upimg
 
             .chat-list
-                #important(data-step="2", data-position="bottom", data-tooltipClass="step_2", data-intro="这是置顶的内(guang)容(gao)，Perber会在这里不定期地推荐一些有意思的东西")
+                #important
                     .chat-box
 
                         //- .fixed_block
@@ -39,14 +36,14 @@ block content
 
 
                         //- card 1 bg+text
-                        .fixed_block.card_3
-                            .ui.right.teal.corner.label(title="友情置顶")
-                                i.fa-smile-o.fa
-                            .ta_cont
-                                h4 调查：要不要增加“赞”功能？
-                                p <strong>功能描述：</strong><br><br>为了保证Perber中的内容质量，计划开发新的功能：每个人都可以对内容进行“赞”和“踩”。<br>如果某条内容得到的“赞”比“踩”多，则在一定时期内(一周？)不能删除；反之，则可以随时被任何人删除。
-                                #vote_bar
-                                #vote_info 此调查会在5月1日截止
+                        //- .fixed_block.card_3
+                        //-     .ui.right.teal.corner.label(title="友情置顶")
+                        //-         i.fa-smile-o.fa
+                        //-     .ta_cont
+                        //-         h4 调查：要不要增加“赞”功能？
+                        //-         p <strong>功能描述：</strong><br><br>为了保证Perber中的内容质量，计划开发新的功能：每个人都可以对内容进行“赞”和“踩”。<br>如果某条内容得到的“赞”比“踩”多，则在一定时期内(一周？)不能删除；反之，则可以随时被任何人删除。
+                        //-         #vote_bar
+                        //-         #vote_info 此调查会在5月1日截止
 
 
 
@@ -158,10 +155,7 @@ block content
                         //-             a(href="http://www.wandoujia.com/join", target="_blank")
                         //-                 | (╭￣3￣)╭♡ &nbsp; 加入豌豆荚
 
-                .chat(data-step="3",
-                    data-position="top",
-                    data-tooltipClass="step_3",
-                    data-intro= "这里是大家发的消息（如果是空的，那就是有人把消息都删除了）。如果你觉得某条消息没意思，也可以一直按着它，然后点击“X”将它删除掉。任何人都可以删除这个页面里的所有消息。消息被删除时，它也会实时地从其他人眼前消失。")
+                .chat
 
         #footer
             .logo
